--- a/client/src/components/userList/user/style.css
+++ b/client/src/components/userList/user/style.css
@@ -1,20 +1,20 @@
 /* UserList */
 
-h1{
+h1 {
     margin: 0 20px;
 }
 
-.userBox{
+.userBox {
     background-color: rgba(127, 240, 255, 0.623);
     display: flex;
     justify-content: space-between;
     width: 600px;
     padding: 10px;
     margin: 20px;
-    gap:10px;
+    gap: 10px;
 }
 
-.details{
+.details {
     display: flex;
     flex-direction: column;
     width: 350px;
@@ -22,15 +22,17 @@ h1{
     /* align-items: center; */
 }
 
-img{
+img {
     height: 80px;
     width: 80px;
     border-radius: 50%;
     background-color: bisque;
 }
-p{
+
+p {
     margin: 0px;
 }
-.connect{
-    align-self:center;
+
+.msg {
+    align-self: center;
 }
