--- a/client/src/components/message/style.css
+++ b/client/src/components/message/style.css
@@ -8,3 +8,14 @@
 #main {
     margin: 10px;
 }
+
+.msgtypebox {
+    width: 45%;
+}
+
+button {
+    border: none;
+    margin: 0;
+    padding: 0;
+    background-color: inherit;
+}
