--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,9 @@
-
-*{
+* {
     margin: 0;
+    font-family: sans-serif;
 }
-.main{
+
+.main {
     display: flex;
     justify-content: space-around;
     align-self: center;
