--- a/client/src/components/userList/user/style.css
+++ b/client/src/components/userList/user/style.css
@@ -8,7 +8,7 @@ h1 {
     background-color: rgba(127, 240, 255, 0.623);
     display: flex;
     justify-content: space-between;
-    width: 600px;
+    width: 800px;
     padding: 10px;
     margin: 20px;
     gap: 10px;
@@ -19,7 +19,8 @@ h1 {
     flex-direction: column;
     width: 350px;
     justify-content: space-around;
-    /* align-items: center; */
+    align-items: flex-start;
+    cursor: pointer,
 }
 
 img {
